feat: Enhance SEO and UI elements
Refine meta tags for improved search engine visibility and add Open Graph/Twitter meta tags for social sharing. Improve the visual presentation of ambient orbs in the Hero component and update the footer layout and content for a more polished user experience.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- SEO Meta Tags -->
-    <title>StockPilotAI - Automated Microstock Intelligence & Prompt Generator</title>
-    <meta name="description" content="Dominate the microstock market with StockPilotAI. Instantly find low-competition trends, generate commercial AI prompts, and optimize metadata for Shutterstock, Adobe Stock, and Freepik." />
-    <meta name="keywords" content="microstock tool, AI prompt generator, stock photography trends, shutterstock keywords, adobe stock research, midjourney prompts, t-shirt design ideas, png asset generator" />
+    <title>StockPilotAI | The Ultimate Microstock Tool for Adobe Stock, Shutterstock & Freepik</title>
+    <meta name="description" content="Boost your microstock earnings with StockPilotAI. Automated keywording, AI trend analysis, and commercial prompt generation for Adobe Stock, Shutterstock, and Freepik contributors." />
+    <meta name="keywords" content="microstock keywords generator, adobe stock trends, shutterstock contributor tool, freepik metadata optimizer, ai image prompts, stock photography niche research, midjourney stock prompts" />
     <meta name="author" content="Md Ibrahim" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://stockpilotai.com/">
+    <meta property="og:title" content="StockPilotAI - Automated Microstock Intelligence">
+    <meta property="og:description" content="Find low-competition niches and generate optimized metadata for your stock assets instantly.">
+    <meta property="og:image" content="https://stockpilotai.com/og-image.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="StockPilotAI - Automated Microstock Intelligence">
+    <meta property="twitter:description" content="The ultimate assistant for stock photographers and digital artists.">
     
     <!-- Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -126,7 +138,7 @@
         color: #94a3b8;
         background: transparent;
         transition: all 0.2s ease;
-        flex-shrink: 0; /* Important: prevents labels from shrinking */
+        flex-shrink: 0;
       }
       .nav-btn-custom:hover {
         color: #ffffff;
