--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
+    <!-- Favicon (Lightning Bolt Logo) -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cdefs%3E%3ClinearGradient id='grad' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%233b82f6;stop-opacity:1' /%3E%3Cstop offset='100%25' style='stop-color:%232dd4bf;stop-opacity:1' /%3E%3C/linearGradient%3E%3C/defs%3E%3Ccircle cx='50' cy='50' r='48' fill='url(%23grad)' /%3E%3Cpath d='M55 15 L25 55 L45 55 L35 85 L75 45 L55 45 L65 15 Z' fill='white' /%3E%3C/svg%3E">
+
     <!-- SEO Meta Tags -->
     <title>StockPilotAI | The Ultimate Microstock Tool for Adobe Stock, Shutterstock & Freepik</title>
     <meta name="description" content="Boost your microstock earnings with StockPilotAI. Automated keywording, AI trend analysis, and commercial prompt generation for Adobe Stock, Shutterstock, and Freepik contributors." />
