--- a/index.html
+++ b/index.html
@@ -14,18 +14,6 @@
     <meta name="keywords" content="microstock keywords generator, adobe stock trends, shutterstock contributor tool, freepik metadata optimizer, ai image prompts, stock photography niche research, midjourney stock prompts" />
     <meta name="author" content="Md Ibrahim" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://stockpilotai.com/">
-    <meta property="og:title" content="StockPilotAI - Automated Microstock Intelligence">
-    <meta property="og:description" content="Find low-competition niches and generate optimized metadata for your stock assets instantly.">
-    <meta property="og:image" content="https://stockpilotai.com/og-image.jpg">
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:title" content="StockPilotAI - Automated Microstock Intelligence">
-    <meta property="twitter:description" content="The ultimate assistant for stock photographers and digital artists.">
-    
     <!-- Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
@@ -116,42 +104,8 @@
         transition: background-color 0.5s ease, color 0.5s ease;
       }
 
-      .nav-container-custom {
-        display: flex;
-        align-items: center;
-        gap: 6px;
-        background: rgba(15, 23, 42, 0.6);
-        border: 1px solid rgba(255, 255, 255, 0.1);
-        border-radius: 9999px;
-        padding: 4px;
-        overflow-x: auto;
-        scrollbar-width: none;
-        -ms-overflow-style: none;
-      }
-      .nav-container-custom::-webkit-scrollbar { display: none; }
-
-      .nav-btn-custom {
-        padding: 8px 14px;
-        border-radius: 9999px;
-        font-size: 13px;
-        font-weight: 700;
-        cursor: pointer;
-        border: 1px solid transparent;
-        white-space: nowrap;
-        color: #94a3b8;
-        background: transparent;
-        transition: all 0.2s ease;
-        flex-shrink: 0;
-      }
-      .nav-btn-custom:hover {
-        color: #ffffff;
-        background: rgba(255, 255, 255, 0.05);
-      }
-      .nav-btn-custom.active {
-        color: #ffffff;
-        background: rgba(37, 99, 235, 0.2);
-        border-color: rgba(37, 99, 235, 0.3);
-      }
+      .no-scrollbar::-webkit-scrollbar { display: none; }
+      .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
 
       .glass-panel {
         background: var(--glass-bg);
